--- a/model.ipynb
+++ b/model.ipynb
@@ -277,7 +277,11 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            " 78%|███████▊  | 362/465 [00:39<00:14,  7.31it/s]"
+            " 78%|███████▊  | 362/465 [00:39<00:14,  7.31it/s]CSAB4.SA: No data found, symbol may be delisted\n",
+            " 86%|████████▋ | 402/465 [00:50<00:07,  8.86it/s]MEGA3.SA: No data found, symbol may be delisted\n",
+            " 87%|████████▋ | 406/465 [00:54<00:27,  2.17it/s]SQIA3.SA: No data found, symbol may be delisted\n",
+            " 90%|█████████ | 419/465 [00:57<00:14,  3.28it/s]ALSO3.SA: No data found, symbol may be delisted\n",
+            "100%|██████████| 465/465 [01:01<00:00,  7.51it/s]\n"
           ]
         }
       ],
