Add seaborn and create a bar plot

--- a/model.ipynb
+++ b/model.ipynb
@@ -69,6 +69,7 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
         "\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
@@ -670,6 +671,33 @@
       "outputs": [],
       "source": [
         "df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Converter a coluna 'Date' para datetime\n",
+        "df['Date'] = pd.to_datetime(df['Date'])\n",
+        "\n",
+        "# Definir a coluna 'Date' como índice\n",
+        "df.set_index('Date', inplace=True)\n",
+        "\n",
+        "# Criar um gráfico de barras usando seaborn com uma paleta pastel\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "sns.set_theme(style=\"whitegrid\")\n",
+        "sns.barplot(x=df.index, y=\"Daily Percent Change\", hue=\"Categoria de Desempenho\", data=df, palette=\"pastel\")\n",
+        "plt.title(\"Daily Percent Change by Performance Category\")\n",
+        "plt.xlabel(\"Date\")\n",
+        "plt.ylabel(\"Daily Percent Change\")\n",
+        "plt.xticks(rotation=45)\n",
+        "plt.legend(title=\"Performance Category\")\n",
+        "\n",
+        "# Mostrar o gráfico\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
       ]
     }
   ],
