Fix data retrieval issue in model.ipynb

--- a/model.ipynb
+++ b/model.ipynb
@@ -278,7 +278,9 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            " 78%|███████▊  | 363/465 [00:35<00:08, 11.81it/s]"
+            " 78%|███████▊  | 363/465 [00:35<00:08, 11.81it/s]CSAB4.SA: No data found, symbol may be delisted\n",
+            " 87%|████████▋ | 404/465 [00:46<00:06, 10.05it/s]MEGA3.SA: No data found, symbol may be delisted\n",
+            " 89%|████████▉ | 416/465 [00:50<00:09,  4.96it/s]"
           ]
         }
       ],
