Add dataframe visualization code

--- a/model.ipynb
+++ b/model.ipynb
@@ -690,6 +690,176 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Date</th>\n",
+              "      <th>Open</th>\n",
+              "      <th>High</th>\n",
+              "      <th>Low</th>\n",
+              "      <th>Close</th>\n",
+              "      <th>Volume</th>\n",
+              "      <th>Dividends</th>\n",
+              "      <th>Stock Splits</th>\n",
+              "      <th>Ticker</th>\n",
+              "      <th>Adj Close</th>\n",
+              "      <th>Capital Gains</th>\n",
+              "      <th>Daily Change</th>\n",
+              "      <th>Daily Percent Change</th>\n",
+              "      <th>5-day Moving Average</th>\n",
+              "      <th>Categoria de Desempenho</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2018-04-26 00:00:00-03:00</td>\n",
+              "      <td>-0.044144</td>\n",
+              "      <td>-0.044000</td>\n",
+              "      <td>-0.044700</td>\n",
+              "      <td>-0.044389</td>\n",
+              "      <td>3.163920</td>\n",
+              "      <td>-0.002798</td>\n",
+              "      <td>-0.002066</td>\n",
+              "      <td>HAPV3.SA</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>-0.004446</td>\n",
+              "      <td>-1.217464</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>Desempenho Moderado</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2018-04-27 00:00:00-03:00</td>\n",
+              "      <td>-0.044346</td>\n",
+              "      <td>-0.044118</td>\n",
+              "      <td>-0.044633</td>\n",
+              "      <td>-0.044356</td>\n",
+              "      <td>1.377255</td>\n",
+              "      <td>-0.002798</td>\n",
+              "      <td>-0.002066</td>\n",
+              "      <td>HAPV3.SA</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.003158</td>\n",
+              "      <td>0.012064</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>Desempenho Moderado</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2018-04-30 00:00:00-03:00</td>\n",
+              "      <td>-0.044374</td>\n",
+              "      <td>-0.044245</td>\n",
+              "      <td>-0.044623</td>\n",
+              "      <td>-0.044427</td>\n",
+              "      <td>0.397766</td>\n",
+              "      <td>-0.002798</td>\n",
+              "      <td>-0.002066</td>\n",
+              "      <td>HAPV3.SA</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.001793</td>\n",
+              "      <td>-0.217607</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>Desempenho Moderado</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2018-05-02 00:00:00-03:00</td>\n",
+              "      <td>-0.044544</td>\n",
+              "      <td>-0.044255</td>\n",
+              "      <td>-0.044735</td>\n",
+              "      <td>-0.044495</td>\n",
+              "      <td>0.498830</td>\n",
+              "      <td>-0.002798</td>\n",
+              "      <td>-0.002066</td>\n",
+              "      <td>HAPV3.SA</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.005108</td>\n",
+              "      <td>0.350974</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>Desempenho Moderado</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2018-05-03 00:00:00-03:00</td>\n",
+              "      <td>-0.044522</td>\n",
+              "      <td>-0.044265</td>\n",
+              "      <td>-0.044776</td>\n",
+              "      <td>-0.044459</td>\n",
+              "      <td>1.130436</td>\n",
+              "      <td>-0.002798</td>\n",
+              "      <td>-0.002066</td>\n",
+              "      <td>HAPV3.SA</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.005563</td>\n",
+              "      <td>0.428223</td>\n",
+              "      <td>-0.044538</td>\n",
+              "      <td>Desempenho Moderado</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                       Date      Open      High       Low     Close    Volume   \n",
+              "0 2018-04-26 00:00:00-03:00 -0.044144 -0.044000 -0.044700 -0.044389  3.163920  \\\n",
+              "1 2018-04-27 00:00:00-03:00 -0.044346 -0.044118 -0.044633 -0.044356  1.377255   \n",
+              "2 2018-04-30 00:00:00-03:00 -0.044374 -0.044245 -0.044623 -0.044427  0.397766   \n",
+              "3 2018-05-02 00:00:00-03:00 -0.044544 -0.044255 -0.044735 -0.044495  0.498830   \n",
+              "4 2018-05-03 00:00:00-03:00 -0.044522 -0.044265 -0.044776 -0.044459  1.130436   \n",
+              "\n",
+              "   Dividends  Stock Splits    Ticker  Adj Close  Capital Gains  Daily Change   \n",
+              "0  -0.002798     -0.002066  HAPV3.SA        NaN            0.0     -0.004446  \\\n",
+              "1  -0.002798     -0.002066  HAPV3.SA        NaN            0.0      0.003158   \n",
+              "2  -0.002798     -0.002066  HAPV3.SA        NaN            0.0      0.001793   \n",
+              "3  -0.002798     -0.002066  HAPV3.SA        NaN            0.0      0.005108   \n",
+              "4  -0.002798     -0.002066  HAPV3.SA        NaN            0.0      0.005563   \n",
+              "\n",
+              "   Daily Percent Change  5-day Moving Average Categoria de Desempenho  \n",
+              "0             -1.217464              0.000000     Desempenho Moderado  \n",
+              "1              0.012064              0.000000     Desempenho Moderado  \n",
+              "2             -0.217607              0.000000     Desempenho Moderado  \n",
+              "3              0.350974              0.000000     Desempenho Moderado  \n",
+              "4              0.428223             -0.044538     Desempenho Moderado  "
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 15,
       "metadata": {},
       "outputs": [
@@ -729,6 +899,13 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
